# code_agent_docker_images

./: .gitignore  README.md  cpp_repos  cpp_repos_origin  process_repos.sh
3Hren/blackhole/: Dockerfile
ABRG-Models/morphologica/: Dockerfile  README.Docker.md
AOMediaCodec/libavif/: Dockerfile
ARMmbed/mbedtls/: Dockerfile
Amanieu/asyncplusplus/: Dockerfile  README_DOCKER.md  compile_test.sh  test_example.cpp
AmokHuginnsson/replxx/: Dockerfile  README.DOCKER.md  test-env.sh
Andersbakken/rtags/: Dockerfile
AustinBrunkhorst/CPP-Reflection/: Dockerfile  Dockerfile.final  README.DOCKER.md  fix_compilation.patch  fix_compilation.sh  fix_typeinfo.patch
BVLC/caffe/: Dockerfile
BayesWitnesses/m2cgen/: Dockerfile.dev  README_DOCKER.md
CLIUtils/CLI11/: Dockerfile  README.dev.md  dev-env.sh
Celtoys/Remotery/: Dockerfile
Celtoys/clReflect/: Dockerfile
CertiVox/MIRACL/: Dockerfile  test_miracl.c
ChristianPanov/lwlog/: Dockerfile  README_DOCKER.md
ChunelFeng/CGraph/: Dockerfile
ClickHouse/clickhouse-cpp/: Dockerfile
CobaltFusion/DebugViewPP/: DOCKER_README.md  Dockerfile  Dockerfile.windows  comprehensive_test.sh  test_env.sh
Cogmasters/concord/: README_DOCKER.md
ComputationalRadiationPhysics/alpaka/: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  ci.yml
CopernicaMarketingSoftware/PHP-CPP/: Dockerfile  README_DOCKER.md  run_tests.sh
CrowCpp/Crow/: Dockerfile
Cubified/tuibox/: DOCKER_README.md  Dockerfile  Makefile  run_tests.sh
Cyan4973/FiniteStateEntropy/: Dockerfile
Cyan4973/xxHash/: Dockerfile
DOSAYGO-Research/rain/: Dockerfile
DPDK/dpdk/: Dockerfile
DaanDeMeyer/reproc/: Dockerfile  Dockerfile.dev  README.docker.md
DanBloomberg/leptonica/: Dockerfile  README.docker.md
DaveGamble/cJSON/: DEVELOPMENT.md  Dockerfile
DigitalInBlue/Celero/: DOCKER_README.md  Dockerfile
DiligentGraphics/DiligentEngine/: Dockerfile  (+1 more)
MariadeAnton/MiLi/: CMakeLists.txt  Dockerfile  run_tests.sh
a-n-t-h-o-n-y/TermOx/tests/: CMakeLists.txt
boostorg/interprocess/test/: CMakeLists.txt
olcPixelGameEngine/: unit_test.cpp
(+1100 files in other folders)
